@startuml Auth_Access_Subsystem
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

enum Role { 
  DOCTOR
  ADMIN
}

class User <<entity: profiles>> {
  - email : String  <<PK>>
  - name : String
  - role : Role
  - passwordHash : String
  - isActive : boolean
  - specialization : String
  - licenseNumber : String
  - createdAt : Instant
  - lastLoginAt : Instant
  + getDoctorProfile() : DoctorProfile
}

class DoctorProfile {
  - specialization : String
  - licenseNumber : String
}

class JwtUtil <<@Component>> {
  + generateToken(email, role, userId) : String
  + validateToken(token) : boolean
  + extractEmail(token) : String
  + extractRole(token) : String
}

class JwtAuthFilter <<OncePerRequestFilter>> {
  + doFilterInternal(...) : void
}

class SecurityConfig <<@Configuration>> {
  + securityFilterChain(http) : SecurityFilterChain
  + passwordEncoder() : PasswordEncoder
}

interface AuthService {
  + login(LoginRequest) : AuthResponse
  + register(RegisterRequest) : AuthResponse
  + logout(email) : void
  + getCurrentUser(email) : User
}

class AuthServiceImpl <<@Service>> {
  - userRepository : UserRepository
  - passwordEncoder : PasswordEncoder
  - jwtUtil : JwtUtil
  - auditService : AuditService
}

interface DoctorProfileService {
  + getProfile(email) : User
  + updateProfile(email, specialization, licenseNumber) : User
}

class DoctorProfileServiceImpl <<@Service>> {
  - userRepository : UserRepository
}

interface UserRepository <<JpaRepository<User,String>>> {
  + findByEmail(email) : Optional<User>
  + existsByEmail(email) : boolean
}

class AuthController <<@RestController: /api/auth>> {
  + login() : ResponseEntity<AuthResponse>
  + register() : ResponseEntity<AuthResponse>
  + logout() : ResponseEntity<Void>
  + getCurrentUser() : ResponseEntity<UserProfileResponse>
}

class DoctorController <<@RestController: /api/doctor>> {
  + getProfile() : ResponseEntity<ProfileResponse>
  + updateProfile() : ResponseEntity
}

' DTOs
class LoginRequest { 
  email
  password
}
class RegisterRequest { 
  name
  email
  password
  mode
  role
  doctorProfile
}
class AuthResponse { 
  token
  name
  email
  role
}

User --> Role
User ..> DoctorProfile : derives
AuthServiceImpl ..|> AuthService
DoctorProfileServiceImpl ..|> DoctorProfileService
AuthServiceImpl --> UserRepository
AuthServiceImpl --> JwtUtil
AuthServiceImpl --> AuditService
DoctorProfileServiceImpl --> UserRepository
SecurityConfig --> JwtAuthFilter
JwtAuthFilter --> JwtUtil
AuthController --> AuthService
DoctorController --> DoctorProfileService
@enduml
